# grpc_python_rust

./: README.md
proto/: test.proto
python-client/: client.py  pyproject.toml  test_pb2.py  test_pb2_grpc.py  ui.py
rust-server/: Cargo.toml  build.rs
rust-server/src/: server.rs
