[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "grpcetst-server"
path = "src/server.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
chrono = "0.4"

[build-dependencies]
tonic-build = "0.10"
